fix teams section spacing

--- a/css/style.css
+++ b/css/style.css
@@ -320,6 +320,10 @@ header a.btn{
 }
 
 /* teams */
+.teams{
+  margin-top: 200px;
+}
+
 .teams-title{
   width: 60%;
 }
@@ -329,7 +333,7 @@ header a.btn{
 }
 
 .teams .teams-container{
-  margin-top: 30px;
+  margin-top: 50px;
   width: 100%;
   background-color: #f5f5f5;
 }
